before techer joined popup text alignment fixed

--- a/src/components/tencentCustomStyles.css
+++ b/src/components/tencentCustomStyles.css
@@ -193,6 +193,8 @@ body,p,span, input, ul, li, label, button, h1,h2,h3,h4,h5,h6{
 .class-reminder-component .header__class-tips{
 	background-color: #3b3b3b !important;
 	display: flex !important;
+	flex-direction: column;
+	align-items: center;
 }
 .dark .el-message.el-message--warning i::before{
 	content: url("https://d2ivesio5kogrp.cloudfront.net/static/yuppedu/images/feather-alert-circle-white.svg") !important;
